--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "./node_modules/standard/eslintrc.json"
+      "react-app/jest"
     ]
   },
   "browserslist": {
